<resources>
    <string name="app_name">#DETECTED</string>
    <string name="title_activity_maps">Map</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="allow">Разрешить</string>
    <string name="restrict">Запретить</string>
    <string name="dollar_more"><![CDATA[$>]]></string>
    <string name="try_later">Попробуйте позже</string>
    <string name="sign_in">Войти</string>
    <string name="network_error">Нет соединения с сервером</string>
    <string name="inspired_by_cicada">inspired by cicada</string>
    <string name="camera_permission">Для запуска сканера приложению необходим доступ к камере</string>
    <string name="camera_permission_denied">Не удалось запустить сканер, необходим доступ к камере</string>
    <string name="current_event">$> cat \'текущий ивент.txt\'\n\n</string>
    <string name="account_exit">Выход из аккаунта</string>
    <string name="account_exit_confirmation">Вы уверены, что хотите выйти из аккаунта?</string>
    <string name="points">Баллов:</string>
    <string name="level">уровень</string>
    <string name="zero">0</string>
    <string name="scanned_tags">Просканировано меток:</string>
    <string name="rank">место</string>
    <string name="common_ranking">Общий рейтинг:</string>
    <string name="exit">Выход</string>
    <string name="edit">Изменить</string>
    <string name="info">Информация</string>
    <string name="nickname_less6">Никнейм должен быть не короче 6 символов</string>
    <string name="nickname_exists">Данный никнейм уже занят</string>
    <string name="tasks_unavailable">Заданий пока нет…\nИли вам кажется, что их нет</string>
    <string name="execution_reward">За выполнение вы получите:</string>
    <string name="image_recently_saved">Изображение уже недавно сохранялось</string>
    <string name="image_saved">Изображение сохранено</string>
    <string name="task_image">image of the task</string>
    <string name="save_image_on_device">save image on device</string>
    <string name="settings_icon">settings icon</string>
    <string name="storage_permission">Для сохранения изображения приложению необходим доступ к записи на хранилище устройства</string>
    <string name="storage_permission_denied">Не удалось сохранить изображение, необходим доступ к хранилищу</string>
    <string name="map_style">mapbox://styles/aminovmaksim/ck4397jle16vo1cpalemp5ddc</string>
    <string name="popup_logout_info">Вы действительно хотите выйти из своего аккаунта?</string>
    <string name="new_nickname">новый никнейм</string>
    <string name="nickname_is_incorrect">nickname is incorrect</string>
    <string name="nickname_warning">Минимальная длина никнейма 6 символов</string>
    <string name="button_cancel">button cancel</string>
    <string name="result_success">Вы успешно активировали метку</string>
    <string name="result_failure">Ошибка считывания метки</string>
    <string name="result_activated">Данная метка уже была активирована</string>
    <string name="scan_result">scan result</string>
    <string name="reward">Награда: %s</string>
    <string name="tag_progress">Подождите, метка обрабатывается</string>
    <string name="remember_rules">Запомни несколько правил:</string>
    <string name="rules">1. Никто не должен знать что ты пользуешься этим приложением.\n2. Ты никогда не слышал про проект #DETECTED \n3.Все баллы в приложении условны и не несут какой-либо силы. Они предназначены только для сравнительной характерситики участников. \n4.При сканировании метки ее ни в коем случае нельзя трогать, сдирать, прятать.\n5.Рассчитывай только на себя, тем не менее НЕ запрещается использовать других участников для достижения своих целей. \n6.Помни, что есть два стула :)</string>
    <string name="read_and_accept">Я прочитал(а) и принимаю правила</string>
    <string name="digital_resistance">цифровое сопротивление</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="map_with_markers">Карта с метками</string>
    <string name="slide2_text">Поэтому мы решили объединить понимающих людей в одну сеть и разработали новую технологию с помощью сканирования меток. Так мы сможем объединиться. Сканируйте метки, отмеченные на карте, либо выполняйте задания.</string>
    <string name="slide2_header">Свободный интернет - это миф!</string>
    <string name="scan_tag_to_add">Для добавления метки, отсканируйте ее</string>
    <string name="error_scan_tag">Ошибка считывания метки, попробуйте заново</string>
    <string name="id">id:</string>
    <string name="tag_type">Тип метки:</string>
    <string name="continue_to_add_lat_lng">Нажмите далее, чтобы указать координаты</string>
    <string name="button_flashlight">button flashlight</string>
    <string name="website">detected.space</string>
    <string name="uid">UID:</string>
    <string name="send_email">Все вопросы отправлять на e-mail:\ndetectedinfo@protonmail.com\nс указанием своего UID</string>
    <string name="license_header">Лицензии открытого ПО:</string>
    <string name="licenses">\n
        ------\n
        RxJava\n
        ------\n
        Copyright © 2016-present, RxJava Contributors.\n\n

        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at\n\n

        http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n\n

        --------\n
        Retrofit\n
        --------\n
        Copyright 2013 Square, Inc.\n\n

        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at\n\n

        http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n\n

        ------\n
        OkHttp\n
        ------\n
        Copyright 2013 Square, Inc.\n\n

        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at\n\n

        http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n\n

        -----------\n
        ButterKnife\n
        -----------\n
        Copyright 2013 Jake Wharton\n\n

        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at\n\n

        http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n\n

        -------\n
        Picasso\n
        -------\n
        Copyright 2013 Square, Inc.\n\n

        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at\n\n

        http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n\n

        ---------\n
        PhotoView\n
        ---------\n
        Copyright 2018 Chris Banes\n\n

        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at\n\n

        http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n\n

        ------\n
        Lombok\n
        ------\n
        Copyright © 2009-2015 The Project Lombok Authors.\n\n

        Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\n

        The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\n

        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n\n

        ------------------\n
        AVLoadingIndicator\n
        ------------------\n
        Copyright 2015 jack wang\n\n

        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at\n\n

        http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n\n

        --------------------------\n
        Clans FloatingActionButton\n
        --------------------------\n
        Copyright 2015 Dmytro Tarianyk\n\n

        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at\n\n

        http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n\n
    </string>
</resources>