<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/black_shape_with_white_stroke"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/popup_logout_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/consola"
        android:text="@string/popup_logout_info"
        android:textAlignment="center"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/popup_logout_btnYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        android:foreground="@drawable/selectable_item_background"
        android:clickable="true"
        android:fontFamily="@font/consola"
        android:paddingStart="0dp"
        android:paddingEnd="8dp"
        android:text="@string/yes"
        android:textAlignment="viewEnd"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/popup_logout_info"
        app:layout_constraintTop_toBottomOf="@+id/popup_logout_info"
        app:rippleColor="@color/lightBlue" />

    <Button
        android:id="@+id/popup_logout_btnNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"
        android:foreground="@drawable/selectable_item_background"
        android:clickable="true"
        android:fontFamily="@font/consola"
        android:text="@string/no"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/popup_logout_btnYes"
        app:layout_constraintTop_toBottomOf="@+id/popup_logout_info"
        app:rippleColor="@color/lightBlue" />

</androidx.constraintlayout.widget.ConstraintLayout>